# PAS-BarbecueOrganizer

./: .~lock.PlanodoProjeto.doc#  ACPC.xml  DiagramaDeClasse.asta  DiagramaDeClasse2.asta  PlanodoProjeto.doc  README.md  Untitled Diagram.xml  diagramas_estados_atividades_everton.asta
Rolenator/: CMakeLists.txt  DAO.cpp  DAO.hpp  DAORegistry.cpp  DAORegistry.hpp  EditEventWindow.hpp  Event.cpp  Event.hpp  EventDAO.cpp  EventDAO.hpp  EventEditHandler.cpp  EventEditHandler.hpp  EventEditWindow.hpp  Invite.cpp  Invite.hpp  InviteDAO.cpp  InviteDAO.hpp  InviteHandler.cpp  InviteHandler.hpp  InviteWindow.hpp  LoginHandler.cpp  LoginHandler.hpp  LoginWindow.hpp  MainPageHandler.cpp  MainPageHandler.hpp  MainPageWindow.hpp  Message.hpp  MessageDAO.cpp  MessageDAO.hpp  MessageHandler.cpp  MessageHandler.hpp  MessageWindow.hpp  MysqlConnection.cpp  MysqlConnection.hpp  RegisterHandler.cpp  RegisterHandler.hpp  RegisterWindow.hpp  Rolenator.cpp  Rolenator.h  Rolenator.kdev4  (+9 more)
Rolenator/.kdev4/: Rolenator.kdev4
